// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileFooter - Snapshots > matches snapshot for navigation links 1`] = `
<a
  aria-label="Home"
  class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
  href="/home"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</a>
`;

exports[`MobileFooter - Snapshots > matches snapshot for profile link 1`] = `
<a
  aria-label="Profile"
  class="relative shrink-0"
  data-cy="footer-nav-profile-btn"
  href="/profile"
>
  <div
    class="cursor-pointer"
    data-size="lg"
    data-testid="avatar-with-fallback"
  >
    <span
      data-testid="avatar-fallback"
    >
      TU
    </span>
    <span
      data-testid="avatar-name"
    >
      Test User
    </span>
  </div>
</a>
`;

exports[`MobileFooter - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex justify-center pb-20 lg:hidden custom-footer"
>
  <div
    class="fixed bottom-0 z-40 flex w-full max-w-[380px] items-center justify-between overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 sm:max-w-[600px] md:max-w-[720px]"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </a>
    <a
      aria-label="Bookmarks"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/bookmarks"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Settings"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </a>
    <a
      aria-label="Profile"
      class="relative shrink-0"
      data-cy="footer-nav-profile-btn"
      href="/profile"
    >
      <div
        class="cursor-pointer"
        data-size="lg"
        data-testid="avatar-with-fallback"
      >
        <span
          data-testid="avatar-fallback"
        >
          TU
        </span>
        <span
          data-testid="avatar-name"
        >
          Test User
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`MobileFooter - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex justify-center pb-20 lg:hidden"
>
  <div
    class="fixed bottom-0 z-40 flex w-full max-w-[380px] items-center justify-between overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 sm:max-w-[600px] md:max-w-[720px]"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </a>
    <a
      aria-label="Bookmarks"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/bookmarks"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Settings"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </a>
    <a
      aria-label="Profile"
      class="relative shrink-0"
      data-cy="footer-nav-profile-btn"
      href="/profile"
    >
      <div
        class="cursor-pointer"
        data-size="lg"
        data-testid="avatar-with-fallback"
      >
        <span
          data-testid="avatar-fallback"
        >
          TU
        </span>
        <span
          data-testid="avatar-name"
        >
          Test User
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`MobileFooter - Snapshots > matches snapshot with different active path 1`] = `
<div
  class="flex justify-center pb-20 lg:hidden"
>
  <div
    class="fixed bottom-0 z-40 flex w-full max-w-[380px] items-center justify-between overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 sm:max-w-[600px] md:max-w-[720px]"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </a>
    <a
      aria-label="Bookmarks"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/bookmarks"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Settings"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </a>
    <a
      aria-label="Profile"
      class="relative shrink-0"
      data-cy="footer-nav-profile-btn"
      href="/profile"
    >
      <div
        class="cursor-pointer"
        data-size="lg"
        data-testid="avatar-with-fallback"
      >
        <span
          data-testid="avatar-fallback"
        >
          TU
        </span>
        <span
          data-testid="avatar-name"
        >
          Test User
        </span>
      </div>
    </a>
  </div>
</div>
`;
